building out the foundation  design system for bargain parrots

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700;800&family=Sora:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
+    <title>Bargain Parrot</title>
+  </head>
+  <body>
     <h1>Bargain Parrot</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, saepe
+      deserunt alias doloribus eligendi perspiciatis dolorum adipisci
+      voluptatibus nisi optio cupiditate temporibus doloremque totam facere
+      tempora ab aperiam voluptatem, rem minus? Earum tempore quos odio
+      inventore dolore exercitationem. Nulla, sunt.
+
+      <button class="btn btn--primary">Buy Now</button>
+
+      <div class="rounded-icon">
+        <i class='bx bxs-message-rounded-detail' ></i>
+      </div>
+    </p>
+  </body>
 </html>
