--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
     />
 
     <title>Bargain Parrot</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    </head>
+
+    <div class="split titles ff-secondary">
+      <h2 class="uppercase">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique amet
+        reiciendis hic velit fuga dolorem consequuntur nostrum doloremque.
+        Accusantium, inventore!
+      </h2>
+      <h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique amet
+        reiciendis hic velit fuga dolorem consequuntur nostrum doloremque.
+        Accusantium, inventore!
+      </h2>
+      <h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique amet
+        reiciendis hic velit fuga dolorem consequuntur nostrum doloremque.
+        Accusantium, inventore!
+      </h2>
+    </div>
+
+    <button class="btn btn--accent btn--rounded btn--outline">checkout</button>
+
+    <div class="icon-rounded icon-rounded--accent">
+        icon
+    </div>
   </head>
   <body>
     <h1>Bargain Parrot</h1>
