more base styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,42 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
 
-  <body>
-    <h1>Bargain Parrot</h1>
+  <body class="container">
+    <h2>Bargain Parrot</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+      perferendis eaque quidem, fuga blanditiis possimus aliquid aliquam rerum
+      quo! Beatae deserunt dolorem praesentium fugiat architecto, iusto
+      dignissimos cum rem ipsum, nam et sed iure aspernatur? Molestias
+      architecto omnis labore pariatur, consectetur adipisci aperiam, porro
+      error rem necessitatibus at tempore odio ut impedit eligendi nemo
+      quibusdam harum quia optio maiores, aliquam aut. Eaque distinctio,
+      exercitationem recusandae neque suscipit corporis. Quo reiciendis quasi
+      quidem fuga provident incidunt corporis sit velit et autem. Dignissimos
+      quaerat suscipit corporis facilis. Eaque maiores reiciendis omnis. Non
+      cupiditate voluptate minus corporis repellendus eligendi, aliquid
+      distinctio atque! Iste voluptatum recusandae praesentium sed pariatur ut
+      impedit ullam incidunt laudantium rerum dignissimos aliquid tempora
+      architecto ab nemo quae fugiat, neque eum itaque sequi unde et. Optio
+      dicta cupiditate rem dolorem! Tempore nostrum sequi a numquam incidunt
+      facilis. Maiores iusto sunt aliquid, minima harum eos corrupti ex
+      dignissimos fugiat veritatis debitis modi possimus voluptas aut, veniam
+      nulla at. Nam, laborum. Placeat, minus quis. In laudantium soluta vero
+      architecto, ipsam tempora numquam dolorem excepturi, voluptate tenetur
+      nostrum ducimus blanditiis corporis ut? Possimus placeat ad illo nisi,
+      provident reprehenderit vero itaque architecto doloremque error
+      praesentium sunt iure. Consectetur aspernatur reprehenderit itaque iusto
+      veritatis debitis rem autem, quibusdam veniam quas neque quaerat, nostrum
+      id mollitia optio saepe natus sint alias vel. Officiis maxime adipisci nam
+      mollitia repudiandae, facilis perferendis, quam assumenda quibusdam
+      consectetur aperiam. Consectetur illum earum assumenda nulla praesentium
+      laudantium amet quisquam. Officia voluptatem quam saepe incidunt eos. At
+      minima expedita ex impedit voluptates, quisquam quibusdam voluptatem
+      aperiam, sit deleniti harum. Doloribus esse aut, rem nostrum soluta
+      aliquid possimus exercitationem sed quas tenetur vero voluptates
+      consequuntur ratione, quia sapiente, asperiores cumque voluptatem
+      assumenda quo autem ipsam nihil voluptas iure iste? At voluptates, illo
+      delectus labore eum esse laudantium nam sapiente, alias eveniet nemo.
+    </p>
   </body>
 </html>
