--- a/user-wallet.html
+++ b/user-wallet.html
@@ -159,10 +159,54 @@
       </section>
 
       <section class="main-content">
-        <h2>Wishlist</h2>
+        <div class="wallet-heading">
+          <h2>Wallet</h2>
+          <button class="btn btn--primary card-add-btn">Add card</button>
+        </div>
 
         <div class="wrapper-wish">
-          <div class="wishlist-card"></div>
+          <div class="wallet-card">
+            <div class="wallet-details">
+              <div>
+                <img src="./assets/img/master-card.png" alt="" />
+              </div>
+              <div>
+                <div class="card-figs">
+                  <div class="card-hidden-figs">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+                  <span>6654</span>
+                </div>
+                <span class="card-position">Secondary card</span>
+              </div>
+            </div>
+
+            <button class="wallet-delete-btn">Delete</button>
+          </div>
+          <div class="wallet-card">
+            <div class="wallet-details">
+              <div>
+                <img src="./assets/img/visa-card.png" alt="" />
+              </div>
+              <div>
+                <div class="card-figs">
+                  <div class="card-hidden-figs">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+                  <span>6654</span>
+                </div>
+                <span class="card-position">Secondary card</span>
+              </div>
+            </div>
+
+            <button class="wallet-delete-btn">Delete</button>
+          </div>
         </div>
       </section>
     </main>
