user empty wishlist

--- a/user-wallet.html
+++ b/user-wallet.html
@@ -164,7 +164,7 @@
           <button class="btn btn--primary card-add-btn">Add card</button>
         </div>
 
-        <div class="wrapper-wish">
+        <div class="main-content-wrapper">
           <div class="wallet-card">
             <div class="wallet-details">
               <div>
