--- a/user-wishlist-empty.html
+++ b/user-wishlist-empty.html
@@ -162,76 +162,16 @@
         <h2>Wishlist</h2>
 
         <div class="main-content-wrapper">
-          <div class="wishlist-card">
-            <div class="wishlist-product-details">
-              <div class="wishlist-product-img">
-                <img src="./assets/img/pizza.jpeg" alt="" />
-              </div>
-              <div class="wishlist-product-detail">
-                <p>50% off on Dominoes Pizza - Pizza</p>
-                <div>
-                  <p class="wishlist-sales-price">₦ 25,000</p>
-                  <div class="wishlist-product-reg-price">
-                    <p>₦ 50,000</p>
-                    <div class="discount-rate">
-                      <span>50% OFF</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="wishlist-btns">
-              <button class="btn btn--primary">Buy</button>
-              <button class="btn btn--outline-primary">Delete</button>
-            </div>
-          </div>
-          <div class="wishlist-card">
-            <div class="wishlist-product-details">
-              <div class="wishlist-product-img">
-                <img src="./assets/img/pizza.jpeg" alt="" />
-              </div>
-              <div class="wishlist-product-detail">
-                <p>50% off on Dominoes Pizza - Pizza</p>
-                <div>
-                  <p class="wishlist-sales-price">₦ 25,000</p>
-                  <div class="wishlist-product-reg-price">
-                    <p>₦ 50,000</p>
-                    <div class="discount-rate">
-                      <span>50% OFF</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="wishlist-btns">
-              <button class="btn btn--primary">Buy</button>
-              <button class="btn btn--outline-primary">Delete</button>
-            </div>
-          </div>
-          <div class="wishlist-card">
-            <div class="wishlist-product-details">
-              <div class="wishlist-product-img">
-                <img src="./assets/img/pizza.jpeg" alt="" />
-              </div>
-              <div class="wishlist-product-detail">
-                <p>50% off on Dominoes Pizza - Pizza</p>
-                <div>
-                  <p class="wishlist-sales-price">₦ 25,000</p>
-                  <div class="wishlist-product-reg-price">
-                    <p>₦ 50,000</p>
-                    <div class="discount-rate">
-                      <span>50% OFF</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="wishlist-btns">
-              <button class="btn btn--primary">Buy</button>
-              <button class="btn btn--outline-primary">Delete</button>
+          <div class="wishlist-empty">
+            <img src="./assets/img/wishlist-empty.svg" alt="" />
+            <div>
+              <h4>You haven't saved an item yet!</h4>
+              <p>
+                Found something you like? Tap on the heart shaped icon next to
+                the item to add it to your wishlist! All your saved items will
+                appear here.
+              </p>
+              <button class="btn btn--primary">Continue Shopping</button>
             </div>
           </div>
         </div>
