user profile empty wallet tab

--- a/user-wallet-empty.html
+++ b/user-wallet-empty.html
@@ -159,19 +159,20 @@
       </section>
 
       <section class="main-content">
-        <h2>Wishlist</h2>
+        <h2>Wallet</h2>
 
         <div class="main-content-wrapper">
           <div class="user-empty">
             <img src="./assets/img/wishlist-empty.svg" alt="" />
             <div>
-              <h4>You haven't saved an item yet!</h4>
+              <h4>You have no saved cards yet!</h4>
               <p>
-                Found something you like? Tap on the heart shaped icon next to
-                the item to add it to your wishlist! All your saved items will
-                appear here.
+                Simplify your shopping experience by adding your credit or debit
+                card to your account. It’s quick, easy, and secure. By adding
+                your card, you can make faster checkouts, track your spending,
+                and keep your card details safe for future purchases.
               </p>
-              <button class="btn btn--primary">Continue Shopping</button>
+              <button class="btn btn--primary">Add Card</button>
             </div>
           </div>
         </div>
