user dashbaord order history empty tab

--- a/user-order-history-empty.html
+++ b/user-order-history-empty.html
@@ -159,20 +159,18 @@
       </section>
 
       <section class="main-content">
-        <h2>Wallet</h2>
+        <h2>Order History</h2>
 
         <div class="main-content-wrapper">
           <div class="user-empty">
-            <img src="./assets/img/wallet-empty.svg" alt="" />
+            <img src="./assets/img/order-history-empty.svg" alt="" />
             <div>
-              <h4>You have no saved cards yet!</h4>
+              <h4>You have placed no orders yet!</h4>
               <p>
-                Simplify your shopping experience by adding your credit or debit
-                card to your account. It’s quick, easy, and secure. By adding
-                your card, you can make faster checkouts, track your spending,
-                and keep your card details safe for future purchases.
+                All your orders will be saved here for you to access their state
+                anytime.
               </p>
-              <button class="btn btn--primary">Add Card</button>
+              <button class="btn btn--primary">Continue Shopping</button>
             </div>
           </div>
         </div>
